--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "follow-fast-cache",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "慕课网学习：短小精悍的前端缓存工具，防止内存泄漏",
   "main": "./src/index.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "babel-loader": "^7.1.5"
+    "babel-loader": "^7.1.5",
+    "user": "0.0.0"
   }
 }
